[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/char/Idle.gd" type="Script" id=1]
[ext_resource path="res://src/char/Char.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/191632__dwsd__jhd-hat-1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/191631__dwsd__jhd-hat-2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/191620__dwsd__jhd-clp-37.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/364919__gowlermusic__cowbell.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/191633__dwsd__jhd-cym-1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/191621__dwsd__jhd-clp-28.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/191613__dwsd__jhd-bd-10.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://addons/beehive/machine.gd" type="Script" id=11]
[ext_resource path="res://src/resources/Goon.tres" type="SpriteFrames" id=12]
[ext_resource path="res://src/char/KnockedBack.gd" type="Script" id=13]
[ext_resource path="res://src/char/Attack.gd" type="Script" id=14]
[ext_resource path="res://src/char/Approach.gd" type="Script" id=15]
[ext_resource path="res://src/char/Resurrected.gd" type="Script" id=16]
[ext_resource path="res://src/char/DukesUp.gd" type="Script" id=17]
[ext_resource path="res://src/char/Walk.gd" type="Script" id=18]
[ext_resource path="res://src/char/Dying.gd" type="Script" id=19]
[ext_resource path="res://src/char/Dead.gd" type="Script" id=20]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 16 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 30, 24 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 52, 28 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 56, 28 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 384, 192 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 10, 12 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 10, 12 )

[sub_resource type="DynamicFont" id=36]
font_data = ExtResource( 10 )

[node name="Char" type="KinematicBody2D" groups=["char-body"]]
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 10 )
scale = Vector2( 1.4, 1.4 )
frames = ExtResource( 12 )
animation = "dukes_up"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="." groups=["hurtboxes"]]
position = Vector2( 0, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0.403922, 0.956863, 0.0431373, 1 )
self_modulate = Color( 0.403922, 0.956863, 0.0431373, 1 )
position = Vector2( 0, -2 )
shape = SubResource( 20 )

[node name="Punchbox" type="Area2D" parent="."]
position = Vector2( 25, 15 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Punchbox"]
modulate = Color( 0.921569, 0.47742, 0.0666667, 1 )
self_modulate = Color( 0.921569, 0.478431, 0.0666667, 1 )
position = Vector2( -5, -3 )
shape = SubResource( 19 )

[node name="Kickbox" type="Area2D" parent="."]
position = Vector2( 16, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kickbox"]
modulate = Color( 0.956863, 0.0588235, 0.0588235, 1 )
self_modulate = Color( 0.976471, 0.0901961, 0.0901961, 1 )
position = Vector2( 8, 10 )
shape = SubResource( 21 )

[node name="ComboTimer" type="Timer" parent="."]
one_shot = true

[node name="Detectbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectbox"]
position = Vector2( 128, 0 )
shape = SubResource( 33 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collide_with_areas = true

[node name="AttackSlotA" type="Area2D" parent="."]
position = Vector2( 64, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSlotA"]
shape = SubResource( 34 )

[node name="AttackSlotB" type="Area2D" parent="."]
position = Vector2( -64, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSlotB"]
shape = SubResource( 35 )

[node name="ScoreComboTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SoundPunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SoundPunch2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SoundKick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SoundDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SoundCombo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SoundCombo2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SoundComboLost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Machine" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Idle" type="Node" parent="Machine"]
script = ExtResource( 1 )

[node name="Approach" type="Node" parent="Machine"]
script = ExtResource( 15 )

[node name="Attack" type="Node" parent="Machine"]
script = ExtResource( 14 )

[node name="KnockedBack" type="Node" parent="Machine"]
script = ExtResource( 13 )

[node name="DukesUp" type="Node" parent="Machine"]
script = ExtResource( 17 )

[node name="Walk" type="Node" parent="Machine"]
script = ExtResource( 18 )

[node name="Dying" type="Node" parent="Machine"]
script = ExtResource( 19 )

[node name="Dead" type="Node" parent="Machine"]
script = ExtResource( 20 )

[node name="Resurrected" type="Node" parent="Machine"]
script = ExtResource( 16 )

[node name="StateLabel" type="RichTextLabel" parent="."]
margin_left = -40.0
margin_top = -72.0
margin_right = 40.0
margin_bottom = -32.0
custom_fonts/normal_font = SubResource( 36 )
bbcode_enabled = true
bbcode_text = "state"
text = "state"

[connection signal="area_entered" from="Punchbox" to="." method="_on_Punchbox_area_entered"]
[connection signal="area_exited" from="Punchbox" to="." method="_on_Punchbox_area_exited"]
[connection signal="area_entered" from="Kickbox" to="." method="_on_Kickbox_area_entered"]
[connection signal="area_exited" from="Kickbox" to="." method="_on_Kickbox_area_exited"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
[connection signal="area_entered" from="Detectbox" to="." method="_on_Detectbox_area_entered"]
[connection signal="area_exited" from="Detectbox" to="." method="_on_Detectbox_area_exited"]
[connection signal="timeout" from="ScoreComboTimer" to="." method="_on_ScoreComboTimer_timeout"]
